--- a/pages/Dashboard.html
+++ b/pages/Dashboard.html
@@ -34,7 +34,7 @@
 <body>
     <!--Header-->
     <!--Header-->
-    <header class="p-2 border-bottom contaner bg-danger">
+    <header class="p-2 border-bottom contaner bg-primary">
         <div class="container">
             <div class="d-flex flex-wrap justify-content-between">
                 <!--Logo app-->
@@ -118,33 +118,49 @@
         <section> 
             <article class="articolo"> 
                 <p class="m-5">
-                    Servizi avazati: S.A.R.A. si distingue per l'offerta di servizi avanzati nel campo del risparmio e
+                    Servizi avanzati: S.A.R.A. si distingue per l'offerta di servizi avanzati nel campo del risparmio e
                     dell'assistenza,
                     utilizzando tecnologie all'avanguardia per soddisfare le esigenze dei clienti.
-                    <hr>
-                </p>
+                    </p><hr>
             </article>
+          <table border=0px>
+            <tr>
+            <td>
             <article class="articolo">
                 <p class="m-5">
-                    Asssitenza professionale: un team di specialisti è sempre disponibili per offrire assistenza
+                    Assitenza professionale: un team di specialisti è sempre disponibile per offrire assistenza
                     professionale,
                     garantendo un supporto affidabile e di qualità.
                 </p>
             </article>
-            <article class="articolo">
-                <p class="m-5">
-                    Risparmio intelligente: attraverso soluzioni innovative, S.A.R.A. aiuta i clienti a realizzare
-                    un risparmio significativo, ottimizzando le loro finanze.<hr>
-                </p>
-            </article>
+            </td>
+            <td>
+              <img width=60% height=60% src="./immagini/dashboard_1.jpg">
+            </td>
+            </tr>
+          </table>
+          <table border=0px>
+            <tr>
+              <td>
+                <img width=60% height=60% src="./immagini/dashboard_2.jpg">
+              </td>
+              <td>
+                <article class="articolo">
+              <p class="m-5">
+                  Risparmio intelligente: attraverso soluzioni innovative, S.A.R.A. aiuta i clienti a realizzare
+                  un risparmio significativo, ottimizzando le loro finanze.</p>
+          </article>
+              </td>
+            </tr>
+          </table>
+          <hr>
             <article class="articolo">
                 <p class="m-5">
                     Se hai bisogno di ulteriori informazioni o assistenza, non esitare a contattare il servizio clienti,
                     attraverso il nostro portale.
-                    <hr>
-                </p>
+                    </p><hr>
             </article>
-        </section>
+        </section> 
     </main>
 
 
