--- a/pages/operazioni.html
+++ b/pages/operazioni.html
@@ -34,7 +34,7 @@
 
 <body>
     <!--Header-->
-    <header class="p-2 border-bottom contaner-fluid bg-danger">
+    <header class="p-2 border-bottom contaner-fluid bg-primary">
         <div class="container">
             <div class="d-flex flex-wrap justify-content-between">
                 <!--Logo app-->
