--- a/pages/promozioni.html
+++ b/pages/promozioni.html
@@ -27,7 +27,7 @@
 <body>
     <!--Header-->
     <!--Header-->
-    <header class="p-2 border-bottom contaner bg-danger">
+    <header class="p-2 border-bottom contaner bg-primary">
         <div class="container">
             <div class="d-flex flex-wrap justify-content-between">
                 <!--Logo app-->
@@ -105,19 +105,19 @@
     
            <table border="0" cellpadding="2%" cellspacing="5%" align="center" width="100%">
                 <tr>
-                    <td width="33.3%"><img src="./immagini/walters.png"></td>
+                    <td width="33.3%"><a href="https://www.instagram.com/walters_burgers/"><img src="./immagini/walters.png"></a></td>
                     <td width="33.3%"><img src="./immagini/bigbang.png"></td>
                     <td width="33.3%">Ricerca di altre promozioni<img src="./immagini/clessidra.gif" width="3.5%" loop=infinite /></td>
                 </tr>
                 <tr>
-                    <td width="33.3%"><img src="./immagini/volver.png"></td>
+                    <td width="33.3%"><a href="https://www.instagram.com/volver_cafe/"><img src="./immagini/volver.png"></a></td>
                     <td width="33.3%">Ricerca di altre promozioni<img src="./immagini/clessidra.gif" width="3.5%" loop=infinite /></td>
-                    <td width="33.3%"><img src="./immagini/veronero.png"></td>
+                    <td width="33.3%"><a href="https://www.veronero.it/"><img src="./immagini/veronero.png"></a></td>
                 </tr>
                 <tr>
                     <td width="33.3%">Ricerca di altre promozioni<img src="./immagini/clessidra.gif" width="3.5%" loop=infinite /></td>
-                    <td width="33.3%"><img src="./immagini/celero.png"></td>
-                    <td width="33.3%"><img src="./immagini/mcdonald.png"></td>
+                    <td width="33.3%"><a href="https://www.celero.it/"><img src="./immagini/celero.png"></a></td>
+                    <td width="33.3%"><a href="https://www.mcdonalds.it/"><img src="./immagini/mcdonald.png"></a></td>
                 </tr>
            </table>
 </main>
