--- a/pages/assistenza.html
+++ b/pages/assistenza.html
@@ -26,7 +26,7 @@
 <body>
     <!--Header-->
     <!--Header-->
-    <header class="p-2 border-bottom contaner-fluid bg-danger">
+    <header class="p-2 border-bottom contaner-fluid bg-primary">
         <div class="container">
             <div class="d-flex flex-wrap justify-content-between">
                 <!--Logo app-->
