--- a/pages/azioni.html
+++ b/pages/azioni.html
@@ -34,7 +34,7 @@
 <body>
     <!--Header-->
     <!--Header-->
-    <header class="p-2 border-bottom contaner bg-danger">
+    <header class="p-2 border-bottom contaner bg-primary">
         <div class="container">
             <div class="d-flex flex-wrap justify-content-between">
                 <!--Logo app-->
