--- a/pages/conto.html
+++ b/pages/conto.html
@@ -25,7 +25,7 @@
 
 <body onload="aggiorna()"> <!--quando la pagina viene caricata avvia la funzione aggiorna-->
     <!--Header-->
-    <header class="p-2 border-bottom contaner bg-danger">
+    <header class="p-2 border-bottom contane bg-primary">
         <div class="container">
             <div class="d-flex flex-wrap justify-content-between">
                 <!--Logo app-->
