--- a/pages/statistiche.html
+++ b/pages/statistiche.html
@@ -6,7 +6,8 @@
     <meta charset="UTF-8">
     <meta name='description' content='Sito Web per StartupYourLife'>
     <meta name='language' content='IT'>
-    <meta name='author' content='Davide Simone Angelo Fucci Mattia Malcangi Antonio Di Bari Antonio Balducci'> <!--Autori della pagina-->
+    <meta name='author' content='Davide Simone Angelo Fucci Mattia Malcangi Antonio Di Bari Antonio Balducci'>
+    <!--Autori della pagina-->
     <!--Titolo pagina-->
     <title>S.A.R.A.</title>
     <!---->
@@ -23,9 +24,9 @@
 
 </head>
 
-<body>
+<body class="w-100">
     <!--Header-->
-    <header class="p-2 border-bottom contaner-fluid bg-danger">
+    <header class="p-2 border-bottom contaner-fluid bg-primary">
         <div class="container">
             <div class="d-flex flex-wrap justify-content-between">
                 <!--Logo app-->
@@ -96,62 +97,64 @@
             </div>
         </div>
     </nav>
-
-    <main class="w-50 mt-5">
-        <form class="form-group"><!--classe di boostrap per gestione del form data-->
-            <label for="filtroData">Filtra per periodo: </label>
-            <input type="month" name="filtroData" id="filtroDataId" min="2024-01" />
-        </form>
-        <canvas class="my-4 w-100" id="myChart" 
-            style="display: block; box-sizing: border-box; height: 200px; width: 1218px;"></canvas> 
+    <div class="container-fluid d-flex flex-row justify-content-center">
+        <main class="w-50 mt-5 align-items-center">
+            <form class="form-group "><!--classe di boostrap per gestione del form data-->
+                <label for="filtroData">Filtra per periodo: </label>
+                <input type="month" name="filtroData" id="filtroDataId" min="2024-01" />
+            </form>
+            <canvas class="my-4 w-100" id="myChart"
+                style="display: block; box-sizing: border-box; height: 200px; width: 1218px;"></canvas>
             <!--canvas tag proprietario della libreria chart, usato per creare un grafico con dei dati da javascript-->
-        <h2>Bilancio</h2>
-        <!--Gestione tabella responsive (si adatta in base alle dimensioni dello schermo)-->
-        <div class="table-responsive small">
-            <table class="table table-striped table-sm">
-                <thead>
-                    <tr>
-                        <th scope="col">Somma</th>
-                        <th scope="col">Entrata/Uscita</th>
-                        <th scope="col">Nome</th>
-                        <th scope="col">Data</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>1100</td>
-                        <td>Entrata</td>
-                        <td>27-01</td>
-                        <td>Stipendio</td>
-                    </tr>
-                    <tr>
-                        <td>1200</td>
-                        <td>Entrata</td>
-                        <td>27-02</td>
-                        <td>Stipendio</td>
-                    </tr>
-                    <tr>
-                        <td>1300</td>
-                        <td>Entrata</td>
-                        <td>27-03</td>
-                        <td>Stipendio</td>
-                    </tr>
-                    <tr>
-                        <td>900</td>
-                        <td>Uscita</td>
-                        <td>29-04</td>
-                        <td>Tasse Universitarie</td>
-                    </tr>
-                    <tr>
-                        <td>1400</td>
-                        <td>Entrata</td>
-                        <td>27-05</td>
-                        <td>Stipendio</td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
-    </main>
+            <h2>Bilancio</h2>
+            <!--Gestione tabella responsive (si adatta in base alle dimensioni dello schermo)-->
+            <div class="table-responsive small">
+                <table class="table table-striped table-sm">
+                    <thead>
+                        <tr>
+                            <th scope="col">Somma</th>
+                            <th scope="col">Entrata/Uscita</th>
+                            <th scope="col">Nome</th>
+                            <th scope="col">Data</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>1100</td>
+                            <td>Entrata</td>
+                            <td>27-01</td>
+                            <td>Stipendio</td>
+                        </tr>
+                        <tr>
+                            <td>1200</td>
+                            <td>Entrata</td>
+                            <td>27-02</td>
+                            <td>Stipendio</td>
+                        </tr>
+                        <tr>
+                            <td>1300</td>
+                            <td>Entrata</td>
+                            <td>27-03</td>
+                            <td>Stipendio</td>
+                        </tr>
+                        <tr>
+                            <td>900</td>
+                            <td>Uscita</td>
+                            <td>29-04</td>
+                            <td>Tasse Universitarie</td>
+                        </tr>
+                        <tr>
+                            <td>1400</td>
+                            <td>Entrata</td>
+                            <td>27-05</td>
+                            <td>Stipendio</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </main>
+    </div>
+
 
     <!--Bootstrap Script-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -161,9 +164,8 @@
         crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script>
-
-//inizio java script
-// let è un tipo di variabile che è come dire tutti i tipi messsi assieme es let può dichiarare un char un int e un double contemporaneamente
+        //inizio java script
+        // let è un tipo di variabile che è come dire tutti i tipi messsi assieme es let può dichiarare un char un int e un double contemporaneamente
         let data = new Date() //prendi data di oggi
         let anno = data.getFullYear().toString(); //prendi l'anno dalla data 
         let mese = (data.getMonth() + 1).toString(); //prendi mese dalla data
