--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
 </body>
 
 <script> //inizializza valori
+    localStorage.clear()
     localStorage.setItem('nCarte', 1); //contatore delle carte
     localStorage.setItem('nconti', 0); //contatore per ogni conto
     localStorage.setItem('contoSelezionato', 0); //conto attualmente in uso
-
     localStorage.setItem('azioniDisponibili', 100) //azioni disponibili 
     localStorage.setItem('azioniComprate', 0) // azioni comprate
 </script>
