--- a/pages/accedi.html
+++ b/pages/accedi.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!Doctype html>
 <html lang="it" data-bs-theme="auto">
 <!--Per maggiori informazioni vedi index.html, non mi va di commentare tutto :)-->
 
