metto i link delle presentazioni

--- a/pages/Dashboard.html
+++ b/pages/Dashboard.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8">
     <meta name='description' content='Sito Web per StartupYourLife'>
     <meta name='language' content='IT'>
-    <meta name='author' content='Davide Simone Angelo Fucci Mattia Malcangi Antonio Di Bari Antonio Balducci'>
+    <meta name='author' content='Davide Simone Angelo Fucci Mattia Malcangi Antonio Di Bari'>
     <!--Autori della pagina-->
     <!--Titolo pagina-->
     <title>S.A.R.A.</title>
@@ -33,8 +33,7 @@
 
 <body>
     <!--Header-->
-    <!--Header-->
-    <header class="p-2 border-bottom contaner bg-primary">
+    <header class="p-2 border-bottom contaner bg-primary"> <!--primary=blu-->
         <div class="container">
             <div class="d-flex flex-wrap justify-content-between">
                 <!--Logo app-->
@@ -42,7 +41,6 @@
                     class="d-flex align-items-center mb-2 mb-lg-0 link-body-emphasis text-decoration-none">
                     <!--Icona in alto a sinistra che riporta alla dashboard-->
                     <i class="bi bi-door-open"></i>
-
                 </a>
                 <!--Titolo-->
                 <h4 class="mb-0">S.A.R.A.</h4>
@@ -160,7 +158,17 @@
                     attraverso il nostro portale.
                     </p><hr>
             </article>
+            <article class="articolo">
+                <p class="m-5">
+                  Di seguito vengono riportati i link, per visualizzare le diverse presentazioni.
+                    </p><hr> 
+                </article>
         </section> 
+        <div>
+            <a class="btn btn-primary btn-l m-2"  target "_blank" href="https://www.canva.com/design/DAGFxxuyaT0/Ivsc2F4DWB6XndM9YWS52A/edit">Presentazione Informatica</a>
+            <a class="btn btn-primary btn-l m-2"  target "_blank" href="https://www.canva.com/design/DAGF4WJ_xtA/mbqNIuK2l1E-Zu4tOdWBaQ/edit">Presentazione Italiano</a>    
+        <!-- target "_blank" si usa per creare una nuova finestra del browser quando usi i link-->
+        </div>
     </main>
 
 
