--- a/pages/Dashboard.html
+++ b/pages/Dashboard.html
@@ -165,8 +165,8 @@
                 </article>
         </section> 
         <div>
-            <a class="btn btn-primary btn-l m-2"  target "_blank" href="https://www.canva.com/design/DAGFxxuyaT0/Ivsc2F4DWB6XndM9YWS52A/edit">Presentazione Informatica</a>
-            <a class="btn btn-primary btn-l m-2"  target "_blank" href="https://www.canva.com/design/DAGF4WJ_xtA/mbqNIuK2l1E-Zu4tOdWBaQ/edit">Presentazione Italiano</a>    
+            <a class="btn btn-primary btn-l m-2"  target "_new" href="https://www.canva.com/design/DAGFxxuyaT0/Ivsc2F4DWB6XndM9YWS52A/edit">Presentazione Informatica</a>
+            <a class="btn btn-primary btn-l m-2"  target "_new" href="https://www.canva.com/design/DAGF4WJ_xtA/mbqNIuK2l1E-Zu4tOdWBaQ/edit">Presentazione Italiano</a>    
         <!-- target "_blank" si usa per creare una nuova finestra del browser quando usi i link-->
         </div>
     </main>
