--- a/pages/azioni/enel.html
+++ b/pages/azioni/enel.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="it">
 <!--Per maggiori informazioni vedi index.html, non mi va di commentare tutto :)-->
@@ -144,32 +145,30 @@
 
     <script>
         
-        let azioniComprate = localStorage.getItem('azioniComprate')
+        let azioniComprate = localStorage.getItem('azioniComprate') //prendo dalla memoria e lo metto in una variabile 
         let azioniDisponibili = localStorage.getItem('azioniDisponibili')
         let costoAzione = 7
 
-        //inizializza valori
+        //aggiorniamo i valori
         function aggiorna() {
             document.getElementById('azioniDisponibiliId').innerHTML = azioniDisponibili
             document.getElementById('azioniComprateId').innerHTML = azioniComprate
             document.getElementById('costoAzioneId').innerHTML = costoAzione
 
         }
-        
         //funzione compra azione
         function compraAzione() {
-            console.log(azioniComprate)
             if (azioniComprate > 0) { //controllo su bottone già disabilitato per vendere azioni
                 let bottone = document.getElementById('vendiAzioneBtn')
                 bottone.disabled = false
-                bottone.classList.add("btn-outline-danger")
+                bottone.classList.add("btn-outline-danger") //cambio colore bottone da grigio a rosso
                 bottone.classList.remove("btn-outline-secondary")
             }
             if (azioniDisponibili == 0) { //controllo su disponibilità azioni
                 alert("Nessuna azione disponibile!")
-                let bottone = document.getElementById('compraAzioneBtn') //cambio di colore del bottone
+                let bottone = document.getElementById('compraAzioneBtn') 
                 bottone.disabled = true //disabilita bottone
-                bottone.classList.remove("btn-outline-success")
+                bottone.classList.remove("btn-outline-success") //cambio di colore del bottone
                 bottone.classList.add("btn-outline-secondary")
                 return
             } else {
@@ -194,7 +193,8 @@
             document.getElementById('azioniDisponibiliId').innerHTML = azioniDisponibili
             document.getElementById('azioniComprateId').innerHTML = azioniComprate
             document.getElementById('costoAzioneId').innerHTML = costoAzione
-            localStorage.setItem('azioniDisponibili', azioniDisponibili)
+            //aggiorna la memoria
+            localStorage.setItem('azioniDisponibili', azioniDisponibili) 
             localStorage.setItem('azioniComprate', azioniComprate)
             localStorage.setItem('costoAzione', costoAzione)
             localStorage.setItem('conto'+conto, saldo)
